--- a/app/src/main/res/layout/activity_add_payment_signet.xml
+++ b/app/src/main/res/layout/activity_add_payment_signet.xml
@@ -559,7 +559,7 @@
                     android:layout_marginHorizontal="@dimen/_21sdp"
                     android:layout_marginTop="@dimen/_21sdp"
                     android:gravity="center"
-                    app:cardBackgroundColor="@color/primary_color"
+                    app:cardBackgroundColor="@color/bg_inactive"
                     app:cardCornerRadius="@dimen/_22sdp"
                     app:cardElevation="0dp">
 
