--- a/app/src/main/res/layout/activity_withdraw_failed_bank_withdraw.xml
+++ b/app/src/main/res/layout/activity_withdraw_failed_bank_withdraw.xml
@@ -173,6 +173,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
+                                android:text="07/27/2020 10:36:14"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:gravity="right"
                                 android:textColor="@color/primary_black"
@@ -206,7 +207,7 @@
                                     android:layout_weight="1"
                                     android:fontFamily="@font/opensans_semibold"
                                     android:gravity="right"
-                                    android:text=""
+                                    android:text="1d3hsM734h…"
                                     android:textColor="@color/primary_black"
                                     android:textSize="@dimen/_11ssp" />
 
@@ -303,7 +304,7 @@
                                     android:layout_weight="1"
                                     android:fontFamily="@font/opensans_semibold"
                                     android:gravity="right"
-                                    android:text=""
+                                    android:text="874jeM734h…"
                                     android:textColor="@color/primary_black"
                                     android:textSize="@dimen/_11ssp" />
 
@@ -339,7 +340,7 @@
                                     android:layout_weight="1"
                                     android:fontFamily="@font/opensans_semibold"
                                     android:gravity="right"
-                                    android:text=""
+                                    android:text="1d3hsM734h…"
                                     android:textColor="@color/primary_green"
                                     android:textSize="@dimen/_11ssp" />
 
@@ -369,7 +370,7 @@
                                 android:layout_weight="1"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:gravity="right"
-                                android:text=""
+                                android:text="100.00 CYN"
                                 android:textColor="@color/primary_black"
                                 android:textSize="@dimen/_11ssp" />
                         </LinearLayout>
@@ -398,7 +399,7 @@
                                 android:layout_weight="1"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:gravity="right"
-                                android:text=""
+                                android:text="1.00 CYN"
                                 android:textColor="@color/primary_black"
                                 android:textSize="@dimen/_11ssp" />
                         </LinearLayout>
