--- a/app/src/main/res/layout/merchant_appl_verification_failed.xml
+++ b/app/src/main/res/layout/merchant_appl_verification_failed.xml
@@ -51,6 +51,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_24sdp"
             android:fontFamily="@font/opensans_regular"
+            android:lineHeight="@dimen/_16ssp"
             android:text="@string/unable_to_verify"
             android:gravity="left"
             android:layout_marginStart="@dimen/_21sdp"
@@ -63,6 +64,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_21sdp"
             android:layout_marginEnd="@dimen/_21sdp"
+            android:lineHeight="@dimen/_16sdp"
+            android:layout_marginTop="@dimen/_2ssp"
             android:fontFamily="@font/opensans_regular"
             android:text="@string/please_try_again"
             android:textAlignment="textStart"
