--- a/app/src/main/res/layout/activity_add_bank_account.xml
+++ b/app/src/main/res/layout/activity_add_bank_account.xml
@@ -58,6 +58,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/opensans_regular"
+                    android:lineHeight="@dimen/_21ssp"
                     android:text="@string/coyni_uses_fiserv"
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/_12ssp" />
