--- a/app/src/main/res/layout/activity_addtiona_info_required.xml
+++ b/app/src/main/res/layout/activity_addtiona_info_required.xml
@@ -46,6 +46,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/_15sdp"
+                    android:lineHeight="@dimen/_16ssp"
                     android:fontFamily="@font/opensans_regular"
                     android:text="Thank you for your interest in coyni. After\nreviewing your account. The coyni team requires\n you to upload the following documentation\nwithin 30 days to continue account verification."
                     android:textColor="@color/primary_black"
@@ -114,6 +115,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/_5sdp"
+                    android:lineHeight="@dimen/_14ssp"
                     android:fontFamily="@font/opensans_semibold"
                     android:text="3 Months Recent Merchant Processing\nStatements (if currently accepting credit/debit \ntransactions)"
                     android:textColor="@color/primary_black"
