--- a/app/src/main/res/layout/activity_benificial_owner_details.xml
+++ b/app/src/main/res/layout/activity_benificial_owner_details.xml
@@ -87,13 +87,60 @@
                     android:src="@drawable/ic_icon_awesome_star"
                     />
             </LinearLayout>
-            <ImageView
-                android:layout_width="wrap_content"
+<!--            <ImageView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:src="@drawable/owneship_percent"-->
+<!--                android:layout_gravity="center"-->
+<!--                android:layout_marginBottom="@dimen/_21sdp"-->
+<!--                />-->
+
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/owneship_percent"
-                android:layout_gravity="center"
-                android:layout_marginBottom="@dimen/_21sdp"
-                />
+                android:layout_marginBottom="@dimen/_16sdp"
+                >
+
+                <ProgressBar
+                    android:id="@+id/progress_bar"
+                    style="?android:attr/progressBarStyleHorizontal"
+                    android:layout_width="180dp"
+                    android:layout_height="130dp"
+                    android:layout_centerInParent="true"
+                    android:progress="10"
+                    android:progressDrawable="@drawable/progressbar_bg1" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/percentage"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/opensans_semibold"
+                        android:layout_gravity="center"
+                        android:text="25%"
+                        android:textColor="@color/primary_black"
+                        android:textSize="@dimen/_18ssp" />
+
+                    <TextView
+                        android:id="@+id/tx_title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/percentage"
+                        android:layout_centerHorizontal="true"
+                        android:layout_centerVertical="true"
+                        android:text="Ownership"
+                        android:textColor="@color/dark_gray"
+                        android:textSize="@dimen/_12ssp" />
+                </LinearLayout>
+
+            </RelativeLayout>
+
+
         </LinearLayout>
     </androidx.cardview.widget.CardView>
     <TextView
