--- a/app/src/main/res/layout/activity_merchant_verification_failed.xml
+++ b/app/src/main/res/layout/activity_merchant_verification_failed.xml
@@ -40,6 +40,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:lineHeight="@dimen/_16ssp"
             android:text="We were unable to verify your business account\nbecause of an issue with your bank account.\nPlease try again or try a different bank account"
             android:textSize="@dimen/_11ssp"
             android:fontFamily="@font/opensans_regular"
