--- a/app/src/main/res/layout/activity_merchants_agrement.xml
+++ b/app/src/main/res/layout/activity_merchants_agrement.xml
@@ -52,7 +52,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=""
+                android:lineHeight="@dimen/_16ssp"
+                android:text="@string/merchants_agreements"
 
                 />
             </LinearLayout>
