--- a/app/src/main/res/layout/activity_reserve_payout.xml
+++ b/app/src/main/res/layout/activity_reserve_payout.xml
@@ -174,6 +174,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
+                                android:text="07/27/2020 10:36:14"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:gravity="right"
                                 android:textColor="@color/primary_black"
@@ -207,7 +208,7 @@
                                     android:layout_weight="1"
                                     android:fontFamily="@font/opensans_semibold"
                                     android:gravity="right"
-                                    android:text=""
+                                    android:text="1d3hsM734h…"
                                     android:textColor="@color/primary_black"
                                     android:textSize="@dimen/_11ssp" />
 
@@ -240,6 +241,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
+                                android:text="20% / 10days Rolling"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:gravity="right"
                                 android:textColor="@color/primary_black"
@@ -338,8 +340,8 @@
                                 android:layout_weight="1"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:gravity="right"
-                                android:text=""
-                                android:textColor="@color/primary_green"
+                                android:text="1840.00 CYN"
+                                android:textColor="@color/primary_black"
                                 android:textSize="@dimen/_11ssp" />
 
                         </LinearLayout>
@@ -368,7 +370,7 @@
                                 android:layout_weight="1"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:gravity="right"
-                                android:text=""
+                                android:text="07/27/2020 10:36:14"
                                 android:textColor="@color/primary_black"
                                 android:textSize="@dimen/_11ssp" />
                         </LinearLayout>
@@ -397,7 +399,7 @@
                                 android:layout_weight="1"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:gravity="right"
-                                android:text=""
+                                android:text="1d3hsM734h…"
                                 android:textColor="@color/primary_green"
                                 android:textSize="@dimen/_11ssp" />
                         </LinearLayout>
