--- a/app/src/main/res/layout/activity_add_benifitial_owner_2.xml
+++ b/app/src/main/res/layout/activity_add_benifitial_owner_2.xml
@@ -4,8 +4,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-android:layout_marginHorizontal="@dimen/_21sdp"
-    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
+android:layout_marginHorizontal="@dimen/_21sdp" android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
 tools:context=".view.business.AddBenifitialOwnerActivity2">
 <ScrollView
     android:layout_width="match_parent"
@@ -422,7 +421,6 @@ tools:context=".view.business.AddBenifitialOwnerActivity2">
             android:id="@+id/addbenifitialowner2CloseCV"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_42sdp"
-
             android:layout_marginTop="@dimen/_38sdp"
             app:cardBackgroundColor="@color/bg_inactive"
             app:cardCornerRadius="@dimen/_21sdp">
